objects/Discount_Rules__mdt.object
<CustomObject>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Validity__c</fullName>
        <label>Product Validity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rule_Name__c</fullName>
        <label>Rule Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Discount Rules</label>
    <pluralLabel>Discount Rules</pluralLabel>
</CustomObject>